--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
     ]
   },
   "devDependencies": {
-    "react-error-overlay": "^6.0.11"
+    "react-error-overlay": "6.0.9"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   }
 }
